Add ScrollToTop component to reset scroll position on route changes

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,7 +11,7 @@
     "slogan": "Clean India, Healthy India",
     "subSlogan": "A Clean Place Is A Safe Place",
     "mission": "Leading the way towards a cleaner, healthier India through innovative hygiene solutions",
-    "cta": "Explore Products",
+    "exploreProducts": "Explore Products",
     "stats": {
       "products": "Quality Products",
       "customers": "Happy Customers", 
