--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -11,7 +11,7 @@
     "slogan": "स्वच्छ भारत, स्वस्थ भारत",
     "subSlogan": "स्वच्छ स्थान एक सुरक्षित स्थान है",
     "mission": "नवाचार स्वच्छता समाधानों के माध्यम से एक स्वच्छ, स्वस्थ भारत की दिशा में अग्रसर",
-    "cta": "उत्पाद देखें",
+    "exploreProducts": "उत्पाद देखें",
     "stats": {
       "products": "गुणवत्तापूर्ण उत्पाद",
       "customers": "संतुष्ट ग्राहक",
